# bao

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  lib.rmeta-link
src/bao_bin/: Cargo.toml
src/bao_bin/src/: main.rs
src/bao_browser/: Cargo.toml
src/bao_browser/src/: cdp_handler.rs  config.rs  delegate.rs  error.rs  lib.rs  page.rs  page_pool.rs  permission.rs  runtime_bridge.rs  screenshot.rs
src/bao_browser/tests/: anti_crawler_detection_tests.rs  browser_config_tests.rs  browser_core_unit_tests.rs  browser_runtime_tests.rs  cdp_server_real_integration_tests.rs  config_boundary_deep_tests.rs  config_deep_tests.rs  config_pool_stats_deep_tests.rs  config_state_error_deep_tests.rs  config_validate_conversion_deep_tests.rs  cross_crate_compat_tests.rs  cross_crate_integration_tests.rs  error_permission_screenshot_comprehensive_tests.rs  error_permission_screenshot_deep_tests.rs  evaluate_result_tests.rs  page_lifecycle_tests.rs  page_pool_delegate_deep_tests.rs  page_screenshot_deep_tests.rs  page_state_config_tests.rs  pagepool_chaos_memory_safety_tests.rs  permission_boundary_tests.rs  permission_guard_error_deep_tests.rs  permission_guard_net_env_run_deep_tests.rs  permission_screenshot_error_tests.rs  realworld_anti_scraping_e2e_tests.rs  realworld_browser_automation_tests.rs  realworld_full_stack_tests.rs  rendering_pipeline_tests.rs  runtime_bridge_deep_tests.rs  screenshot_permission_error_tests.rs  security_sandbox_tests.rs  stealth_diagnostic_detection_tests.rs  stealth_fingerprint_e2e_tests.rs  stealth_profile_config_tests.rs  thread_safety_concurrency_tests.rs
src/bao_cdp/: Cargo.toml
src/bao_cdp/src/: backend.rs  lib.rs  protocol.rs  router.rs  servo_bridge.rs  ws.rs
src/bao_cdp/tests/: backend_bridge_channel_deep_tests.rs  bridge_channel_deep_tests.rs  bridge_channel_stress_concurrent_tests.rs  bridge_channel_timeout_clone_deep_tests.rs  bridge_channel_timeout_edge_deep_tests.rs  bridge_command_exhaustive_tests.rs  cdp_server_accessor_error_tests.rs  cdp_server_integration_tests.rs  cdp_types_deep_tests.rs  cross_crate_integration_full_chain_tests.rs  deep_domain_tests.rs  domain_boundary_tests.rs  domain_command_full_coverage_tests.rs  domain_handler_command_route_tests.rs  domain_handler_debugger_input_emulation_stub_target_tests.rs  domain_handler_response_field_boundary_tests.rs  domain_handler_tests.rs  domain_stress_tests.rs  event_sender_broadcast_tests.rs  full_chain_tests.rs  http_discovery_tests.rs  protocol_all_domains_internal_backend_tests.rs  protocol_domain_handler_deep_tests.rs  protocol_edge_case_tests.rs  protocol_message_deep_tests.rs  protocol_router_tests.rs  protocol_serialize_boundary_tests.rs  protocol_subcommand_full_coverage_tests.rs  router_backend_deep_tests.rs  router_external_detach_edge_tests.rs  router_lifecycle_tests.rs  router_session_internal_backend_deep_tests.rs  router_session_lifecycle_deep_tests.rs  wave23_e2e_integration_tests.rs  ws_resilience_tests.rs
src/bao_crypto/: Cargo.toml
src/bao_crypto/src/: certificate.rs  cipher.rs  kdf.rs  key_exchange.rs  keypair.rs  lib.rs  random.rs  sign.rs  verify.rs
src/bao_crypto/tests/: crypto_tests.rs
src/bao_engine/: Cargo.toml
src/bao_engine/src/: codegen.rs  context.rs  dispatch_sm.rs  error.rs  host_fn.rs  job_queue.rs  lib.rs  module_loader.rs  value.rs
src/bao_engine/tests/: codegen_boundary_tests.rs  codegen_constructor_finalizer_tests.rs  codegen_deep_tests.rs  codegen_edge_case_tests.rs  codegen_generate_all_module_tests.rs  codegen_roundtrip_tests.rs  dispatch_sm_tests.rs  engine_core_tests.rs  error_handling_tests.rs  es_advanced_features_tests.rs  host_fn_tests.rs  job_queue_context_tests.rs  jserror_parseresult_deep_tests.rs  jsvalue_display_format_tests.rs  module_loader_host_fn_tests.rs  resource_exhaustion_tests.rs  value_boundary_tests.rs  value_error_tests.rs
src/bao_engine_macros/: Cargo.toml
src/bao_engine_macros/src/: lib.rs
src/bao_native_stubs/: Cargo.toml
src/bao_native_stubs/src/: c_lib_stubs.rs  lib.rs
src/bao_runtime/: Cargo.toml
src/bao_runtime/src/: bun_api.rs  bun_test.rs  dispatch.rs  fetch_api.rs  gc_store.rs  globals.rs  http_client.rs  lib.rs  node_buffer.rs  node_child_process.rs  node_crypto.rs  node_dns.rs  node_events.rs  node_fs.rs  node_http.rs  node_https.rs  node_module.rs  node_net.rs  node_os.rs  node_path.rs  node_perf_hooks.rs  node_querystring.rs  node_readline.rs  node_stream.rs  node_string_decoder.rs  node_timers_module.rs  node_tls.rs  node_tty.rs  node_url.rs  node_util.rs  node_vm.rs  node_zlib.rs  permission_bridge.rs  require.rs  resolver_bridge.rs  runtime.rs  stealth_http.rs  timers.rs  web_api.rs
src/bao_runtime/tests/: assert_deep_tests.rs  buffer_deep_tests.rs  buffer_module_tests.rs  bug353_deep_verification_tests.rs  bun_api_deep_tests.rs  bun_api_tests.rs  bun_test_deep_tests.rs  child_process_deep_tests.rs  child_process_vm_module_tests.rs  cli_lib_tests.rs  crypto_deep_tests.rs  dns_net_deep_tests.rs  es_language_features_tests.rs  esm_import_deep_tests.rs  event_loop_module_tests.rs  events_deep_tests.rs  events_path_deep_tests.rs  fetch_api_tests.rs  fs_buffer_write_tests.rs  fs_deep_tests.rs  gc_stealth_unit_tests.rs  gc_store_deep_tests.rs  globals_deep_tests.rs  http_client_deep_tests.rs  http_https_deep_tests.rs  js_engine_boundary_tests.rs  minimal_event_loop_tests.rs  net_deep_tests.rs  node_assert_deep_tests.rs  node_assert_util_tests.rs  node_async_hooks_deep_tests.rs  node_buffer_tests.rs  node_crypto_tests.rs  node_dgram_inspector_deep_tests.rs  node_diagnostics_channel_deep_tests.rs  node_dns_net_tests.rs  node_events_tests.rs  node_fs_tests.rs  node_http_tests.rs  node_misc_tests.rs  (+47 more)
src/bao_stealth/: Cargo.toml
src/bao_stealth/src/: behavior.rs  canvas.rs  engine_props.rs  http2.rs  lib.rs  navigator.rs  profile.rs  tls.rs  webgl_audio.rs
src/bao_stealth/tests/: anti_detection_verification_tests.rs  stealth_tests.rs  (+29 more)
src/bao_tls/: Cargo.toml
src/bao_uloop/: Cargo.toml
src/cdp-server/: Cargo.toml
src/lsquic_sys/: Cargo.toml  build.rs
src/spawn_sys/: Cargo.toml
(+317 files in other folders)
