[workspace]
resolver = "2"
members = [
    "src/bao_engine",
    "src/bao_engine_macros",
    "src/bao_runtime",
    "src/bao_browser",
    "src/bao_bin",
    "src/bao_cdp",
    "src/bao_stealth",
    "src/bao_native_stubs",
    "src/bao_uloop",
    "src/opaque",
    "src/bun_alloc",
    "src/bun_core",
    "src/bun_output_tags",
    "src/bun_core_macros",
    "src/ptr",
    "src/wyhash",
    "src/dispatch",
    "src/errno",
    "src/threading",
    "src/io",
    "src/resolve_builtins",
    "src/glob",
    "src/parsers",
    "src/base64",
    "src/safety",
    "src/shell_parser",
    "src/ini",
    "src/exe_format",
    "src/which",
    "src/valkey",
    "src/perf",
    "src/csrf",
    "src/s3_signing",
    "src/sha_hmac",
    "src/url",
    "src/hash",
    "src/highway",
    "src/brotli",
    "src/zstd",
    "src/zlib",
    "src/spawn",
    "src/picohttp",
    "src/router",
    "src/output",
    "src/windows_sys",
    "src/dotenv",
    "src/watcher",
    "src/md",
    "src/crash_handler",
    "src/clap",
    "src/clap_macros",
    "src/install_types",
    "src/options_types",
    "src/patch",
    "src/platform",
    "src/js",
    "src/ast",
    "src/js_parser",
    "src/js_printer",
    "src/http",
    "src/http_types",
    "src/event_loop",
    "src/sql",
    "src/sourcemap",
    "src/semver",
    "src/resolver",
    "src/paths",
    "src/sys",
    "src/collections",
    "src/lshpack_sys",
    "src/lsquic_sys",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR MPL-2.0"
repository = "https://github.com/user/bao"

[workspace.dependencies]
mozjs = { path = "../mozjs/mozjs" }
mozjs_sys = { path = "../mozjs/mozjs-sys" }
bao_native_stubs = { path = "src/bao_native_stubs" }
bao_uloop = { path = "src/bao_uloop" }

# ─── External deps (from Bun upstream) ──────────────────────────────────────
rust-argon2 = "3.0"
bcrypt = "0.19"
getrandom = "0.4"
strum = { version = "0.26", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
hashbrown = { version = "0.15", default-features = false, features = ["inline-more", "allocator-api2"] }
allocator-api2 = { version = "0.2", default-features = false, features = ["alloc"] }
bstr = { version = "1", default-features = false, features = ["alloc"] }
scopeguard = "1"
const_format = "0.2"
enum-map = "2"
enumset = "1"
libc = "0.2"
memchr = "2"
rustix = { version = "0.38", default-features = false, features = ["std", "fs", "event", "process", "net"] }
bitflags = "2"
thiserror = "2"
smallvec = "1"
bumpalo = { version = "3", features = ["collections", "boxed"] }
typed-arena = "2"
itoa = "1"

# ─── Internal path deps ─────────────────────────────────────────────────────
bun_opaque = { path = "src/opaque" }
bun_analytics = { path = "src/analytics" }
bun_api = { path = "src/api" }
bun_base64 = { path = "src/base64" }
bun_bundler = { path = "src/bundler" }
bun_collections = { path = "src/collections" }
bun_css = { path = "src/css" }
bun_errno = { path = "src/errno" }
bun_glob = { path = "src/glob" }
bun_http = { path = "src/http" }
bun_install = { path = "src/install" }
bun_parsers = { path = "src/parsers" }
bun_io = { path = "src/io" }
bun_js = { path = "src/js" }
bun_libarchive = { path = "src/libarchive" }
bun_md = { path = "src/md" }
bun_paths = { path = "src/paths" }
bun_resolver = { path = "src/resolver" }
bun_safety = { path = "src/safety" }
bun_semver = { path = "src/semver" }
bun_sourcemap = { path = "src/sourcemap" }
bun_sql = { path = "src/sql" }
bun_sys = { path = "src/sys" }
bun_threading = { path = "src/threading" }
bun_valkey = { path = "src/valkey" }
bun_watcher = { path = "src/watcher" }
bun_clap = { path = "src/clap" }
bun_clap_macros = { path = "src/clap_macros" }
bun_crash_handler = { path = "src/crash_handler" }
bun_csrf = { path = "src/csrf" }
bun_dns = { path = "src/dns" }
bun_dotenv = { path = "src/dotenv" }
bun_event_loop = { path = "src/event_loop" }
bun_exe_format = { path = "src/exe_format" }
bun_highway = { path = "src/highway" }
bun_http_types = { path = "src/http_types" }
bun_ini = { path = "src/ini" }
bun_install_types = { path = "src/install_types" }
bun_js_parser = { path = "src/js_parser" }
bun_js_printer = { path = "src/js_printer" }
bun_ast = { path = "src/ast" }
bun_picohttp = { path = "src/picohttp" }
bun_s3_signing = { path = "src/s3_signing" }
bun_zlib = { path = "src/zlib" }
bun_patch = { path = "src/patch" }
bun_platform = { path = "src/platform" }
bun_sha_hmac = { path = "src/sha_hmac" }
bun_dispatch = { path = "src/dispatch" }
bun_brotli = { path = "src/brotli" }
bun_perf = { path = "src/perf" }
bun_resolve_builtins = { path = "src/resolve_builtins" }
bun_url = { path = "src/url" }
bun_windows_sys = { path = "src/windows_sys" }
bun_ptr = { path = "src/ptr" }
bun_alloc = { path = "src/bun_alloc" }
bun_standalone_graph = { path = "src/standalone_graph" }
bun_uws = { path = "src/uws" }
bun_wyhash = { path = "src/wyhash" }
bun_hash = { path = "src/hash" }
bun_core = { path = "src/bun_core" }
bun_core_macros = { path = "src/bun_core_macros" }
bun_output_tags = { path = "src/bun_output_tags" }
bun_router = { path = "src/router" }
bun_shell_parser = { path = "src/shell_parser" }
bun_spawn = { path = "src/spawn" }
bun_zstd = { path = "src/zstd" }
bun_options_types = { path = "src/options_types" }
bun_bunfig = { path = "src/bunfig" }
bun_output = { path = "src/output" }
bun_runtime = { path = "src/runtime", default-features = false }
bun_which = { path = "src/which" }
bun_transpiler = { path = "src/transpiler" }

bun_ast_jsc = { path = "src/ast_jsc" }
bun_boringssl = { path = "src/boringssl" }
bun_boringssl_sys = { path = "src/boringssl_sys" }
bun_brotli_sys = { path = "src/brotli_sys" }
bun_lshpack_sys = { path = "src/lshpack_sys" }
bun_lsquic_sys = { path = "src/lsquic_sys" }
bun_bundler_jsc = { path = "src/bundler_jsc" }
bun_cares_sys = { path = "src/cares_sys" }
bun_css_jsc = { path = "src/css_jsc" }
bun_http_jsc = { path = "src/http_jsc" }
bun_install_jsc = { path = "src/install_jsc" }
bun_jsc_macros = { path = "src/jsc_macros" }
bun_jsc = { path = "src/jsc" }
bun_js_parser_jsc = { path = "src/js_parser_jsc" }
bun_libdeflate_sys = { path = "src/libdeflate_sys" }
bun_libuv_sys = { path = "src/libuv_sys" }
bun_mimalloc_sys = { path = "src/mimalloc_sys" }
bun_patch_jsc = { path = "src/patch_jsc" }
bun_semver_jsc = { path = "src/semver_jsc" }
bun_simdutf_sys = { path = "src/simdutf_sys" }
bun_sourcemap_jsc = { path = "src/sourcemap_jsc" }
bun_spawn_sys = { path = "src/spawn_sys" }
bun_sql_jsc = { path = "src/sql_jsc" }
bun_sys_jsc = { path = "src/sys_jsc" }
bun_tcc_sys = { path = "src/tcc_sys" }
bun_uws_sys = { path = "src/uws_sys" }
bun_zlib_sys = { path = "src/zlib_sys" }

[profile.release]
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
strip = "none"

# Debug builds: line-tables-only instead of full DWARF to save disk.
# Single binary drops from ~1.7GB to ~200MB. Stack traces still work.
[profile.dev]
debug = 1

# Test profile: inherit dev's debug=1, strip symbols for test binaries.
[profile.test]
debug = 1

# CI / bulk test profile: optimized + stripped for minimal binary size.
# Usage: cargo test --profile test-ci
[profile.test-ci]
inherits = "test"
opt-level = 2
strip = true

[workspace.lints.rust]
# Every rustc warning is an error. Individual lints below can override this
# back to "warn" (their priority 0 beats the group's -1) where a warning level
# is intentional.
warnings = { level = "deny", priority = -1 }
# `bun_asan` is set via RUSTFLAGS (`--cfg=bun_asan` + `--check-cfg=cfg(bun_asan)`)
# by scripts/build/rust.ts for asan builds; register it here so a plain
# `cargo build` / `cargo check` (without those flags) doesn't warn.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bun_asan)'] }
# link.exe unconditionally prints "Creating library X.dll.lib and object
# X.dll.exp" to stdout when linking each proc-macro DLL on Windows hosts;
# there is no linker flag to suppress it. The lint already exempts itself
# from `-D warnings`, so this only silences the noise.
linker_messages = "allow"
dead_code = "deny"
# Every crate in this workspace is an internal implementation detail of one
# binary, so `pub` is a claim that *another crate* imports the item. If it
# doesn't, write `pub(crate)` — that keeps the item under `dead_code` analysis
# instead of being exempted as an external API root. Macro-generated items that
# must stay `pub` carry `#[allow(unreachable_pub)]` at the expansion site.
unreachable_pub = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
unused_assignments = "deny"
unused_macros = "deny"
unreachable_code = "deny"
unreachable_patterns = "deny"

[workspace.lints.clippy]
# == provenance-safe pointer casts ==
# Prefer `.cast::<T>()` / `.cast_const()` / `.cast_mut()` / `ptr::from_ref` /
# `ptr::from_mut` over `as *const T` / `as *mut T`. The method forms cannot
# accidentally change mutability or perform a ref→raw coercion in one step,
# and they preserve provenance under Strict Provenance.
ptr_as_ptr = "deny"
ptr_cast_constness = "deny"
ref_as_ptr = "deny"
borrow_as_ptr = "deny"

# == soundness / leak prevention ==
undocumented_unsafe_blocks = "deny"
not_unsafe_ptr_arg_deref = "deny"
mem_forget = "deny"
cast_ptr_alignment = "deny"
transmute_ptr_to_ptr = "deny"
as_ptr_cast_mut = "deny"
drop_non_drop = "deny"
uninit_vec = "deny"

# == performance ==
redundant_clone = "deny"
unnecessary_to_owned = "deny"
needless_collect = "deny"
or_fun_call = "deny"
assigning_clones = "deny"
implicit_clone = "deny"
iter_overeager_cloned = "deny"
map_clone = "deny"
trivially_copy_pass_by_ref = "deny"
large_types_passed_by_value = "deny"
large_enum_variant = "deny"
large_stack_frames = "deny"
vec_init_then_push = "deny"
format_collect = "deny"
manual_memcpy = "deny"
needless_pass_by_value = "deny"

# == clarity / api hygiene ==
unnecessary_unwrap = "deny"
derive_partial_eq_without_eq = "deny"
derivable_impls = "deny"
clone_on_ref_ptr = "deny"
if_same_then_else = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
clone_on_copy = "deny"
useless_conversion = "deny"
# vec_box / boxed_local: legit patterns are `#[expect]`-suppressed at the site
# with a one-line "why the box is load-bearing" comment (intrusive-list address
# stability, JsClass finalizer thunk contract). Anything new must justify itself.
vec_box = "deny"
boxed_local = "deny"
arc_with_non_send_sync = "deny"
manual_swap = "deny"
mem_replace_option_with_none = "deny"
redundant_locals = "deny"
manual_c_str_literals = "deny"
precedence = "deny"
implicit_saturating_sub = "deny"
ptr_eq = "deny"

# == disallowed-* (configured in clippy.toml) ==
disallowed_methods = "deny"
disallowed_types = "deny"
disallowed_macros = "deny"

# == explicitly allowed (Zig-port style; intentional) ==
collapsible_if = "allow"
collapsible_else_if = "allow"
collapsible_match = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
len_zero = "allow"
len_without_is_empty = "allow"
needless_return = "allow"
module_inception = "allow"
missing_safety_doc = "allow"
let_unit_value = "allow"
needless_update = "allow"
explicit_auto_deref = "allow"
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
enum_variant_names = "allow"
upper_case_acronyms = "allow"
wrong_self_convention = "allow"
should_implement_trait = "allow"
new_without_default = "allow"
self_named_constructors = "allow"  # Zig-port `Type::init()` constructor convention
single_match = "allow"
manual_range_contains = "allow"
needless_lifetimes = "allow"
needless_range_loop = "allow"
while_let_loop = "allow"
while_let_on_iterator = "allow"
blocks_in_conditions = "allow"
diverging_sub_expression = "allow"
declare_interior_mutable_const = "allow"
empty_line_after_doc_comments = "allow"
empty_docs = "allow"
excessive_precision = "allow"
unreadable_literal = "allow"
approx_constant = "allow"
result_unit_err = "allow"
only_used_in_recursion = "allow"
# `as u32` etc. is identity on some libc targets, required widen on others
unnecessary_cast = "allow"
new_ret_no_self = "allow"
map_identity = "allow"

# ─── Patch: unify mozjs across Bao + servo ─────────────────────────────────
[patch.crates-io]
mozjs = { path = "../mozjs/mozjs" }
mozjs_sys = { path = "../mozjs/mozjs-sys" }

