[package]
name = "bao_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
servo = { path = "../../../servo/components/servo", default-features = false, features = ["baked-in-resources"] }
servo-url = { path = "../../../servo/components/url" }
dpi = "0.1"
url = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
base64 = "0.22"
serde_json = "1"
bao_cdp = { path = "../bao_cdp" }
bao_stealth = { path = "../bao_stealth" }
bao_runtime = { path = "../bao_runtime" }
bun_core.workspace = true
bun_runtime.workspace = true
bun_sys.workspace = true
mozjs = { path = "../../../mozjs/mozjs" }
serde = "1"

[dev-dependencies]
cdp-server = { path = "../cdp-server" }
bao_engine = { path = "../bao_engine" }
