[package]
name = "bao_cdp"
version = "0.1.0"
edition = "2021"

[dependencies]
bao_engine = { path = "../bao_engine" }
cdp-server = { path = "../../src/cdp-server" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha1 = "0.10"
tungstenite = { version = "0.26", features = ["handshake"] }
cdp-protocol = "0.3"
