[package]
name = "bao_engine"
version = "0.1.0"
description = "SpiderMonkey engine wrapper for Bao runtime"
edition.workspace = true
license.workspace = true

[dependencies]
mozjs.workspace = true
mozjs_sys.workspace = true
bao_engine_macros = { path = "../bao_engine_macros" }
libc = "0.2"
log = "0.4"

# Wave 73: SpiderMonkey Jsc arm dispatch adapters
# Low-tier crates whose `link_interface!` Jsc/Js variant bao_engine implements.
bun_event_loop = { path = "../event_loop" }
bun_io = { path = "../io" }
bun_spawn = { path = "../spawn" }
bun_crash_handler = { path = "../crash_handler" }
bun_core = { path = "../bun_core" }
bun_uws = { path = "../uws" }
bun_collections = { path = "../collections" }
# bun_ast / bun_bundler deferred to Wave 73-F (bun_bundler has unresolved lolhtml_sys)

[dev-dependencies]
# Wave 73-G: tests need bao_native_stubs to pull in C-library stubs (uSockets uws_get_loop, etc.)
bao_native_stubs = { path = "../bao_native_stubs" }
# bao_runtime provides __bun_run_file_poll (extern "Rust") referenced by bun_io::FilePoll::on_update.
bao_runtime = { path = "../bao_runtime" }

[features]
live_uws_loop = []
