[package]
name = "bao_runtime"
version = "0.1.0"
description = "Bao runtime integration — JS engine + Bun API + event loop"
edition.workspace = true
license.workspace = true

[dependencies]
bao_engine = { path = "../bao_engine" }
mozjs.workspace = true
mozjs_sys.workspace = true
log = "0.4"
minreq = { version = "2", features = ["https"] }
libc = "0.2"
