[package]
name = "bao_runtime"
version = "0.1.0"
description = "Bao runtime integration — JS engine + Bun API + event loop"
edition.workspace = true
license.workspace = true

[dependencies]
bao_engine = { path = "../bao_engine" }
mozjs.workspace = true
mozjs_sys.workspace = true
log = "0.4"
minreq = { version = "2", features = ["https"] }
libc = "0.2"
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
sha1 = "0.10"
digest = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
scrypt = "0.11"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
tiny_http = "0.12"
tungstenite = { version = "0.26", features = ["native-tls"] }
flate2 = "1"

