[package]
name = "bao_runtime"
version = "0.1.0"
description = "Bao runtime integration — JS engine + Bun API + event loop"
edition.workspace = true
license.workspace = true

[dependencies]
bao_engine = { path = "../bao_engine" }
bao_stealth = { path = "../bao_stealth" }
mozjs.workspace = true
mozjs_sys.workspace = true
log = "0.4"
libc = "0.2"
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
sha1 = "0.10"
digest = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
scrypt = "0.11"
rand = "0.8"
hex = "0.4"
flate2 = "1"
serde_json = "1"

# C library symbol providers (pure Rust replacements)
bao_native_stubs = { path = "../bao_native_stubs" }

# Bun 纯 Rust crate（L0-L3 层，零 JSC 依赖）
bun_http = { path = "../http" }
bun_http_types = { path = "../http_types" }
bun_core = { path = "../bun_core" }
bun_url = { path = "../url" }
bun_uws = { path = "../uws" }
bun_picohttp = { path = "../picohttp" }
bun_resolver = { path = "../resolver" }
bun_event_loop = { path = "../event_loop" }
bun_dns = { path = "../dns" }
bun_spawn = { path = "../spawn" }
bun_io = { path = "../io" }
bun_base64 = { path = "../base64" }

[dev-dependencies]
bao_engine = { path = "../bao_engine" }
tempfile = "3"
