[package]
name = "bao_stealth"
version = "0.1.0"
edition = "2021"

[dependencies]
bao_engine = { path = "../bao_engine" }
mozjs.workspace = true
mozjs_sys.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
bao_runtime = { path = "../bao_runtime" }
