[package]
name = "bao_tls"
version = "0.1.0"
description = "Pure Rust TLS 1.2/1.3 for Bao runtime (rustls + RustCrypto CryptoProvider)"
edition.workspace = true
license.workspace = true

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["tls12", "logging", "std"] }
bao_crypto = { path = "../bao_crypto" }
bun_uws_sys = { path = "../uws_sys" }
bun_core = { path = "../bun_core" }

# RustCrypto primitives (re-exported for CryptoProvider trait impls)
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
p256 = { version = "0.13", features = ["ecdh", "pkcs8"] }
p384 = { version = "0.13", features = ["ecdh", "pkcs8"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
ecdsa = { version = "0.16", features = ["pkcs8"] }
rsa = { version = "0.9", features = ["pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }
getrandom = "0.4"
rand_core = "0.6"
webpki-roots = "0.26"
rustls-native-certs = "0.8"
thiserror = "2"

[dev-dependencies]
rcgen = "0.13"

[lints]
workspace = true
