[package]
name = "bao_uloop"
version = "0.1.0"
description = "Raw epoll + eventfd implementation of the uSockets loop ABI for Bao"
edition = "2024"
license = "MIT"

# Tier-0 safe: must not depend on any Bun crate that itself reaches JS or the
# network stack. `bun_uws_sys` provides the #[repr(C)] PosixLoop / InternalLoopData
# mirror we allocate; `libc` provides raw epoll/eventfd syscalls.
[dependencies]
bun_uws_sys = { path = "../uws_sys" }
libc = "0.2"

[dev-dependencies]
bao_native_stubs = { path = "../bao_native_stubs" }
