[package]
name = "cdp-server"
version = "0.1.0"
edition = "2021"
description = "Generic CDP (Chrome DevTools Protocol) server framework"
license = "MIT OR MPL-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = { version = "0.26", features = ["handshake"] }
