[package]
name = "bun_spawn_sys"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
bstr.workspace = true
libc.workspace = true
scopeguard.workspace = true
bun_analytics.workspace = true
bun_core.workspace = true
bun_sys.workspace = true
bun_windows_sys = { workspace = true, target = "windows" }  # tier-0 no_std leaf; conditional target keeps IoCounters alias valid via cfg(windows) re-exports
enumset.workspace = true
strum.workspace = true

[target.'cfg(windows)'.dependencies]
bun_libuv_sys.workspace = true
